# virec

./: .gitignore  CMakeLists.txt  CXX_CMakeLists.txt  EMCC-CMakeLists.txt  Makefile  README.md  build.py  test  test.cpp  test.ir  test.ve  test2.cpp
Vire/AST-Defs/: ClassAST.cpp  FunctionAST.cpp  OpAST.cpp  TypesAST.cpp  VariableAST.cpp
Vire/AST-Parse/: Include.hpp  parser.cpp
Vire/Exceptions/: error.cpp
Vire/Lex/: token.hpp
Vire/Proto/: File.cpp
cmake/: ErrorBuilder.cmake  Parser.cmake  Proto.cmake  VAnalyzer.cmake
examples/: insertion_sort.ve  prime_sieve.ve  struct_sqroot.ve
src/: main.cpp  test.ve
src/Vire/: Commons.cpp
src/Vire/AST-Defs/: ASTType.hpp  ClassAST.cpp  ControlFlow.cpp  ExprAST.cpp  FunctionAST.cpp  HelperFunctions.cpp  Include.hpp  LoopAST.cpp  Memory.cpp  OpAST.cpp  ReturnAST.cpp  TryExcept.cpp  TypesAST.cpp  UnionStructAST.cpp  UnionStructCommon.cpp  VariableAST.cpp
src/Vire/AST-Parse/: parser.cpp  parser.hpp
src/Vire/Error-Builder/: builder.cpp  builder.hpp
src/Vire/Exceptions/: error.cpp
src/Vire/Lex/: lexer.cpp  token.cpp  token.hpp
src/Vire/Proto/: File.cpp  Include.hpp
src/Vire/VAnalyzer/: Include.hpp  analyzer.cpp  analyzer.hpp
src/Vire/VCompiler/: vcompiler.cpp  vcompiler.hpp
src/res/: test.cpp  test.ve
src/resources/: test.ve
src/tests/: test-format.txt.save
src/vire/: includes.hpp
src/vire/api/: VApi.cmake  VApi.cpp  VApi.hpp  include.hpp
src/vire/ast/: ASTType.hpp  ClassAST.cpp  CodeAST.cpp  ControlFlow.cpp  ExprAST.cpp  FunctionAST.cpp  HelperFunctions.cpp  LoopAST.cpp  Memory.cpp  OpAST.cpp  TryExcept.cpp  TypesAST.cpp  UnionStructAST.cpp  VariableAST.cpp  include.hpp
src/vire/ast/parse/: ASTType.hpp  ClassAST.cpp  CodeAST.cpp  ControlFlow.cpp  ExprAST.cpp  FunctionAST.cpp  Identifier.cpp  LiteralAST.cpp  Memory.cpp  ModuleAST.cpp  OpAST.cpp  UnionStructAST.cpp  VariableAST.cpp
src/vire/ast/types/: Types.cpp  Types.hpp  type.cpp  type.hpp
src/vire/config/: Config.cmake  config.cpp  config.hpp  include.hpp
src/vire/errors/: ErrorBuilder.cmake  builder.cpp  builder.hpp  include.hpp
src/vire/lex/: include.hpp  lexer.cpp  token.cpp  token.hpp
src/vire/parse/: Parser.cmake  include.hpp  keyword_hash.cpp  keyword_hash.hpp  keyword_wrapper.hpp  keywords.gperf  parser.cpp  parser.hpp
src/vire/proto/: Proto.cmake  file.cpp  file.hpp  iname.cpp  iname.hpp  include.hpp
src/vire/v_analyzer/: VAnalyzer.cmake  analyzer.cpp  analyzer.hpp
src/vire/v_compiler/: VCompiler.cmake  codegen.cpp  codegen.hpp  include.hpp
wasm-build/: VIRELANG.js
wasm-lib/: CMakeLists.txt  VIRELANG.js  emcc-extern-pre.js  emcc-pre.js  main.mjs  package-lock.json  package.json  tsconfig.json  vire-emcc.d.ts  vire.js  vire.ts
wasm-lib/VIRELANG/: VIRELANG.d.ts  VIRELANG.js
wasm-lib/wrapper/: VIRELANG.js  vire-wrapper.d.ts  vire-wrapper.js
wasm-test/: test.js  test.wasm  testw.wat
